==> jonttu0/ExpressLRS/src/src/at32_hal/HardwareSerial.cpp <==
#include "HardwareSerial.h"
#include "internal.h"
#include "irq.h"
#include "debug_elrs.h"
#include "targets.h"
#include "priorities.h"
#include <string.h>
#define UART_ENABLE_DMA_RX 1
#define UART_ENABLE_DMA_TX 1
#define DMA_CH_EN(CH, VAL) CH->ctrl_bit.chen = VAL          // dma_channel_enable(dma_ch, TRUE);
#define DMA_CH_IS_EN(CH)   (CH->ctrl_bit.chen == TRUE)
#define DMA_FDT_INT_EN(CH, VAL) CH->ctrl_bit.fdtien = VAL   // dma_interrupt_enable(dma_ch, DMA_FDT_INT, TRUE);
#define DMA_HDT_INT_EN(CH, VAL) CH->ctrl_bit.hdtien = VAL   // dma_interrupt_enable(dma_ch, DMA_HDT_INT, TRUE);
#define PRINTF_NUM_BLOCKS   8
#define PRINTF_BUFF_SIZE    64

bool FAST_CODE_2 DMA_transmit(HardwareSerial * serial, dma_channel_type * dma_ch, uint8_t const dma_ch_idx)
{
    dma_type * dma = serial->dma_unit_tx;

    /* Check if something to send */
    uint32_t len = 0, data = (uint32_t)serial->tx_pool_get(&len);
    if (data && len) {
        /* Clear all irq flags */
        dma->clr = dma_ifcr_mask_get(0xF, dma_ch_idx);
        /* Set source address */
        dma_ch->dtcnt = len;
        dma_ch->maddr = data;
        /* enable tx */
        serial->hw_enable_transmitter();
        /* Start transfer */
        DMA_CH_EN(dma_ch, TRUE);
        DMA_FDT_INT_EN(dma_ch, TRUE);
        return true;
    }
    return false;
}

static void configure_uart_peripheral(usart_type * uart, uint32_t baud, uint8_t half_duplex)
{
    enable_pclock((uint32_t)uart);
    usart_reset(uart);
    //uint32_t const pclk = get_pclock_frequency((uint32_t)uart);

    usart_init(uart, baud, USART_DATA_8BITS, USART_STOP_1_BIT);
    usart_parity_selection_config(uart, USART_PARITY_NONE);
    if (half_duplex)
        usart_single_line_halfduplex_select(uart, TRUE);
    usart_transmitter_enable(uart, TRUE);
    usart_receiver_enable(uart, TRUE);
    usart_enable(uart, TRUE);
}

void HardwareSerial::begin(unsigned long baud, uint8_t mode)
{
    (void)mode;
    usart_type * uart = NULL;
    dma_type * dmaptr;

    half_duplex = ((rx_pin == tx_pin) || (rx_pin == (uint32_t)UNDEF_PIN));

    p_usart_rx = (usart_type*)uart_peripheral_get(rx_pin);
    p_usart_tx = (usart_type*)uart_peripheral_get(tx_pin);

    if (half_duplex)
        p_usart_rx = p_usart_tx;

    if (p_usart_tx == USART1) {
        usart_irq_tx = USART1_IRQn;
        usart_tx_idx = 0;
#ifdef USART2
    } else if (p_usart_tx == USART2) {
        usart_irq_tx = USART2_IRQn;
        usart_tx_idx = 1;
#endif // USART2
#ifdef USART3
    } else if (p_usart_tx == USART3) {
        usart_irq_tx = USART3_IRQn;
        usart_tx_idx = 2;
#endif // USART3
    } else {
        // Invalid HW UART config!
        return;
    }
    _started_serials[usart_tx_idx] = this;

    if (p_usart_rx != p_usart_tx) {
        if (p_usart_rx == USART1) {
            usart_irq_rx = USART1_IRQn;
            usart_rx_idx = 0;
            write_u32(&_started_serials[0], (uint32_t)this);
#ifdef USART2
        } else if (p_usart_rx == USART2) {
            usart_irq_rx = USART2_IRQn;
            usart_rx_idx = 1;
#endif // USART2
#ifdef USART3
        } else if (p_usart_rx == USART3) {
            usart_irq_rx = USART3_IRQn;
            usart_rx_idx = 2;
#endif // USART3
        } else {
            // Invalid HW UART config!
            return;
        }
        _started_serials[usart_rx_idx] = this;
    } else {
        usart_rx_idx = usart_tx_idx;
    }

    dma_unit_rx = dma_unit_tx = NULL;
    dma_ch_rx = dma_ch_tx = NULL;

    /* Init RX buffer */
    rx_head = rx_tail = 0;
    tx_head = tx_tail = 0;

    /* Init TX list */
    tx_pool_tail = tx_pool_head = tx_pool;
    uint8_t iter;
    for (iter = 0; iter < (sizeof(tx_pool)/sizeof(tx_pool[0]) - 1); iter++) {
        tx_pool[iter].next = &tx_pool[iter+1];
    }
    tx_pool[iter].next = &tx_pool[0];

    if ((p_use_dma & USE_DMA_RX) && p_usart_rx) {
        uart = p_usart_rx;
        dmaptr = (dma_type *)dma_get((uint32_t)uart, DMA_USART_RX, 0);
        if (dmaptr) {
            /*********** USART RX DMA Init ***********/
            dma_channel_type* dma_ch = (dma_channel_type*)dma_channel_get((uint32_t)uart, DMA_USART_RX, 0);
            dma_irq_rx = dma_irq_get((uint32_t)uart, DMA_USART_RX, 0);
            /* Validate DMA params */
            if (dma_ch && dma_irq_rx != 0xFF) {
                dma_ch_rx = dma_ch;
                dma_ch_idx_rx = dma_channel_idx_get((uint32_t)uart, DMA_USART_RX, 0) - 1;
                dma_unit_rx = dmaptr;

                enable_pclock((uint32_t)dmaptr);
                dma_reset(dma_ch);

                /* RX DMA stream config */
                dma_init_type dma_cfg;
                dma_cfg.peripheral_base_addr = (uint32_t)&uart->dt;
                dma_cfg.memory_base_addr = (uint32_t)rx_buffer;
                dma_cfg.direction = DMA_DIR_PERIPHERAL_TO_MEMORY;
                dma_cfg.buffer_size = sizeof(rx_buffer);
                dma_cfg.peripheral_inc_enable = FALSE;
                dma_cfg.memory_inc_enable = TRUE;
                dma_cfg.peripheral_data_width = DMA_PERIPHERAL_DATA_WIDTH_BYTE;
                dma_cfg.memory_data_width = DMA_MEMORY_DATA_WIDTH_BYTE;
                dma_cfg.loop_mode_enable = TRUE;
                dma_cfg.priority = DMA_PRIORITY_LOW;
                dma_init(dma_ch, &dma_cfg);

                /* Enable DMA */
                DMA_CH_EN(dma_ch, TRUE);

                /* Set interrupt configuration */
                NVIC_SetPriority((IRQn_Type)dma_irq_rx,
                    NVIC_EncodePriority(NVIC_GetPriorityGrouping(), ISR_PRIO_UART_DMA, 0));
                NVIC_EnableIRQ((IRQn_Type)dma_irq_rx);

                dma_request_config((uint32_t)uart, DMA_USART_RX, 0);
            }
        }
    }

    if ((p_use_dma & USE_DMA_TX) && p_usart_tx) {
        uart = p_usart_tx;
        dmaptr = (dma_type *)dma_get((uint32_t)uart, DMA_USART_TX, 0);
        if (dmaptr) {
            /*********** USART TX DMA Init ***********/
            dma_channel_type* dma_ch = (dma_channel_type*)dma_channel_get((uint32_t)uart, DMA_USART_TX, 0);
            dma_irq_tx = dma_irq_get((uint32_t)uart, DMA_USART_TX, 0);
            /* Validate DMA params */
            if (dma_ch && dma_irq_tx != 0xFF) {
                dma_ch_tx = dma_ch;
                dma_ch_idx_tx = dma_channel_idx_get((uint32_t)uart, DMA_USART_TX, 0) - 1;
                dma_unit_tx = dmaptr;

                enable_pclock((uint32_t)dmaptr);
                dma_reset(dma_ch);

                /* TX DMA stream config */
                dma_init_type dma_cfg;
                dma_cfg.peripheral_base_addr = (uint32_t)&uart->dt;
                dma_cfg.memory_base_addr = (uint32_t)rx_buffer;
                dma_cfg.direction = DMA_DIR_MEMORY_TO_PERIPHERAL;
                dma_cfg.buffer_size = sizeof(rx_buffer);
                dma_cfg.peripheral_inc_enable = FALSE;
                dma_cfg.memory_inc_enable = TRUE;
                dma_cfg.peripheral_data_width = DMA_PERIPHERAL_DATA_WIDTH_BYTE;
                dma_cfg.memory_data_width = DMA_MEMORY_DATA_WIDTH_BYTE;
                dma_cfg.loop_mode_enable = TRUE;
                dma_cfg.priority = DMA_PRIORITY_LOW;
                dma_init(dma_ch, &dma_cfg);

                /* Disable DMA */
                DMA_CH_EN(dma_ch, FALSE);

                /* Disable interrupts by default */
                DMA_HDT_INT_EN(dma_ch, FALSE);
                DMA_FDT_INT_EN(dma_ch, FALSE);

                /* Set interrupt configuration */
                NVIC_SetPriority((IRQn_Type)dma_irq_tx,
                    NVIC_EncodePriority(NVIC_GetPriorityGrouping(), ISR_PRIO_UART_DMA, 0));
                NVIC_EnableIRQ((IRQn_Type)dma_irq_tx);

                dma_request_config((uint32_t)uart, DMA_USART_TX, 0);
            }
        }
    }

    /* Configure UART pins to alternative mode */
    uart_config_afio((uint32_t)p_usart_tx, rx_pin, tx_pin);

    /*********** USART Init ***********/
    configure_uart_peripheral(p_usart_tx, baud, half_duplex);
    if (p_usart_rx != p_usart_tx) {
        usart_receiver_enable(p_usart_tx, FALSE);

        configure_uart_peripheral(p_usart_rx, baud, uart_pin_is_tx(rx_pin));
        usart_transmitter_enable(p_usart_rx, FALSE);
    }

    /* Enable IDLE ISR when DMA is used */
    p_usart_rx->ctrl1_bit.idleien = (dma_unit_rx) ? TRUE : FALSE;
    p_usart_rx->ctrl1_bit.rdbfien = (dma_unit_rx) ? FALSE : TRUE;
    p_usart_tx->ctrl1_bit.tdbeien = FALSE;

    p_usart_rx->ctrl3_bit.dmaren = (dma_unit_rx) ? TRUE : FALSE;
    p_usart_tx->ctrl3_bit.dmaten = (dma_unit_tx) ? TRUE : FALSE;

    /* Configure to receiver mode by default */
    hw_enable_receiver();
    /* Enable UART IRQ */
    if (usart_irq_tx < 0xff) {
        NVIC_SetPriority((IRQn_Type)usart_irq_tx,
            NVIC_EncodePriority(NVIC_GetPriorityGrouping(), ISR_PRIO_UART, 0));
        NVIC_EnableIRQ((IRQn_Type)usart_irq_tx);
    }
    if (usart_irq_rx < 0xff) {
        NVIC_SetPriority((IRQn_Type)usart_irq_rx,
            NVIC_EncodePriority(NVIC_GetPriorityGrouping(), ISR_PRIO_UART, 0));
        NVIC_EnableIRQ((IRQn_Type)usart_irq_rx);
    }
}

void HardwareSerial::Pause(void)
{
    /* Stop RX UART */
    usart_enable(p_usart_rx, FALSE);
}

void HardwareSerial::Continue(void)
{
    /* Enable RX UART */
    usart_enable(p_usart_rx, FALSE);
}

void HardwareSerial::end(void)
{
    if (dma_ch_rx) {
        DMA_CH_EN(dma_ch_rx, FALSE);
        NVIC_DisableIRQ((IRQn_Type)dma_irq_rx);
    }
    if (dma_ch_tx) {
        DMA_CH_EN(dma_ch_tx, FALSE);
        NVIC_DisableIRQ((IRQn_Type)dma_irq_tx);
    }
    if (p_usart_rx != p_usart_tx) {
        usart_enable(p_usart_rx, FALSE);
        if (usart_irq_rx < 0xff)
            NVIC_DisableIRQ((IRQn_Type)usart_irq_rx);
    }
    if (p_usart_tx) {
        usart_enable(p_usart_tx, FALSE);
        if (usart_irq_tx < 0xff)
            NVIC_DisableIRQ((IRQn_Type)usart_irq_tx);
    }
    _started_serials[usart_tx_idx] = NULL;
    _started_serials[usart_rx_idx] = NULL;
}

void FAST_CODE_2 HardwareSerial::hw_enable_receiver(void)
{
    uint8_t const duplex = gpio_out_valid(p_duplex_pin);
    if (!half_duplex && !duplex)
        // Full duplex --> ignore config
        return;
    usart_type * const uart_tx = p_usart_tx;
    // Wait until transfer is completed
    while (uart_tx->sts_bit.tdc == FALSE);
    // and disable transmitter
    uart_tx->ctrl1_bit.ten = FALSE;
    if (duplex) {
        gpio_out_write(p_duplex_pin, 0 ^ p_duplex_pin_inv);
    }
    p_usart_rx->ctrl1_bit.ren = TRUE;
}

void FAST_CODE_2 HardwareSerial::hw_enable_transmitter(void)
{
    uint8_t const duplex = gpio_out_valid(p_duplex_pin);
    if (!half_duplex && !duplex)
        // Full duplex --> ignore config
        return;
    p_usart_rx->ctrl1_bit.ren = FALSE;
    if (duplex) {
        gpio_out_write(p_duplex_pin, 1 ^ p_duplex_pin_inv);
    }
    p_usart_tx->ctrl1_bit.ten = TRUE;
}
