==> jonttu0/ExpressLRS/src/src/stm32_hal/HardwareSerial.cpp <==
#include "HardwareSerial.h"
#include "internal.h"
#include "irq.h"
#include "debug_elrs.h"
#include "targets.h"
#include "priorities.h"
#include <stm32f1xx_ll_usart.h>
#include <stm32f1xx_ll_bus.h>
#include <stm32f1xx_ll_dma.h>
#define StatReg         SR
#define RxDataReg       DR
#define TxDataReg       DR
#include <stm32l0xx_ll_usart.h>
#include <stm32l0xx_ll_bus.h>
#include <stm32l0xx_ll_dma.h>
#include <stm32l4xx_ll_usart.h>
#include <stm32l4xx_ll_bus.h>
#include <stm32l4xx_ll_dma.h>
#include <stm32f3xx_ll_usart.h>
#include <stm32f3xx_ll_bus.h>
#include <stm32f3xx_ll_dma.h>
#include <stm32f7xx_ll_usart.h>
#include <stm32f7xx_ll_bus.h>
#include <stm32f7xx_ll_dma.h>
#define LL_DMA_EnableChannel LL_DMA_EnableStream
#define LL_DMA_DisableChannel LL_DMA_DisableStream
#define LL_DMA_IsEnabledChannel LL_DMA_IsEnabledStream
#define LL_DMA_SetChannelPriorityLevel LL_DMA_SetStreamPriorityLevel
#include <stm32g0xx_ll_usart.h>
#include <stm32g0xx_ll_bus.h>
#include <stm32g0xx_ll_dma.h>
#define USART_SR_RXNE       USART_ISR_RXNE_RXFNE
#define USART_SR_TXE        USART_ISR_TXE_TXFNF
#define USART_CR1_RXNEIE    USART_CR1_RXNEIE_RXFNEIE
#define USART_CR1_TXEIE     USART_CR1_TXEIE_TXFNFIE
#define USART3_IRQn         USART3_4_LPUART1_IRQn
#include <string.h>
#define StatReg         ISR
#define RxDataReg       RDR
#define TxDataReg       TDR
#define USART_SR_IDLE   USART_ISR_IDLE
#define USART_SR_RXNE   USART_ISR_RXNE
#define USART_SR_ORE    USART_ISR_ORE

int8_t FAST_CODE_2 DMA_transmit(HardwareSerial * serial, uint8_t dma_ch)
{
    DMA_TypeDef * dma = (DMA_TypeDef *)serial->dma_unit_tx;
    //irqstatus_t irqs = irq_save();

    /* Check if TX ongoing... */
    /*if (!LL_DMA_IsEnabledChannel(dma, dma_ch))*/ {
        /* Check if something to send */
        uint32_t len = 0, data = (uint32_t)serial->tx_pool_get(&len);
        if (data && len) {
            //LL_DMA_DisableChannel(dma, dma_ch);
            /* Clear all irq flags */
            __IO uint32_t * IFCR;
            uint32_t mask;
#ifdef STM32F7xx
            mask = ((0x1 << DMA_LIFCR_CFEIF1_Pos) - 1);
            if (dma_ch < 4)
                IFCR = &dma->LIFCR;
            else
                IFCR = &dma->HIFCR;
#else
            mask = 0xF;
            IFCR = &dma->IFCR;
#endif
            WRITE_REG(*IFCR, dma_ifcr_mask_get(mask, dma_ch));
            /* Set source address */
            LL_DMA_SetMemoryAddress(dma, dma_ch, data);
            LL_DMA_SetDataLength(dma, dma_ch, len);
            /* enable tx */
            serial->hw_enable_transmitter();
            /* Start transfer */
            LL_DMA_EnableChannel(dma, dma_ch);
            return 0;
        }
    }

    //irq_restore(irqs);
    return -1;
}

static void configure_uart_peripheral(USART_TypeDef * uart, uint32_t baud, uint8_t half_duplex)
{
    enable_pclock((uint32_t)uart);
    uint32_t pclk = get_pclock_frequency((uint32_t)uart);
#if defined(STM32F1xx)
    LL_USART_SetBaudRate(uart, pclk, baud);
#elif defined(STM32G0xx)
    LL_USART_SetBaudRate(uart, pclk, LL_USART_PRESCALER_DIV1, LL_USART_OVERSAMPLING_16, baud);
#else
    LL_USART_SetBaudRate(uart, pclk, LL_USART_OVERSAMPLING_16, baud);
#endif
    /* Configure other UART registers */
    LL_USART_ConfigAsyncMode(uart);
    if (half_duplex)
        LL_USART_EnableHalfDuplex(uart);
}

void HardwareSerial::begin(unsigned long baud, uint8_t mode)
{
    (void)mode;
    USART_TypeDef * uart = NULL;
    DMA_TypeDef * dmaptr;

    half_duplex = ((rx_pin == tx_pin) || (rx_pin == (uint32_t)UNDEF_PIN));

    p_usart_rx = (USART_TypeDef*)uart_peripheral_get(rx_pin);
    p_usart_tx = (USART_TypeDef*)uart_peripheral_get(tx_pin);

    if (half_duplex)
        p_usart_rx = p_usart_tx;

    if (p_usart_tx == USART1) {
        usart_irq_tx = USART1_IRQn;
        write_u8(&usart_tx_idx, 0);
        write_u32(&_started_serials[0], (uint32_t)this);
#ifdef USART2
    } else if (p_usart_tx == USART2) {
        usart_irq_tx = USART2_IRQn;
        write_u8(&usart_tx_idx, 1);
        write_u32(&_started_serials[1], (uint32_t)this);
#endif // USART2
#ifdef USART3
    } else if (p_usart_tx == USART3) {
        usart_irq_tx = USART3_IRQn;
        write_u8(&usart_tx_idx, 2);
        write_u32(&_started_serials[2], (uint32_t)this);
#endif // USART3
    } else {
        // Invalid HW UART config!
        return;
    }

    if (p_usart_rx != p_usart_tx) {
        if (p_usart_rx == USART1) {
            usart_irq_rx = USART1_IRQn;
            write_u8(&usart_rx_idx, 0);
            write_u32(&_started_serials[0], (uint32_t)this);
#ifdef USART2
        } else if (p_usart_rx == USART2) {
            usart_irq_rx = USART2_IRQn;
            write_u8(&usart_rx_idx, 1);
            write_u32(&_started_serials[1], (uint32_t)this);
#endif // USART2
#ifdef USART3
        } else if (p_usart_rx == USART3) {
            usart_irq_rx = USART3_IRQn;
            write_u8(&usart_rx_idx, 2);
            write_u32(&_started_serials[2], (uint32_t)this);
#endif // USART3
        } else {
            // Invalid HW UART config!
            return;
        }
    } else {
        write_u8(&usart_rx_idx, usart_tx_idx);
    }

    dma_unit_rx = dma_unit_tx = NULL;

    /* Init RX buffer */
    rx_head = rx_tail = 0;
#if UART_USE_TX_POOL_ONLY
    tx_buffer_ptr = NULL;
    tx_buffer_len = 0;
#else
    tx_head = tx_tail = 0;
#endif

    /* Init TX list */
    tx_pool_tail = tx_pool_head = tx_pool;
    uint8_t iter;
    for (iter = 0; iter < (sizeof(tx_pool)/sizeof(tx_pool[0]) - 1); iter++) {
        tx_pool[iter].next = &tx_pool[iter+1];
    }
    tx_pool[iter].next = &tx_pool[0];

    if ((p_use_dma & USE_DMA_RX) && p_usart_rx) {
        uart = (USART_TypeDef*)p_usart_rx;
        dmaptr = (DMA_TypeDef *)dma_get((uint32_t)uart, DMA_USART_RX, 0);
        if (dmaptr) {
            /*********** USART RX DMA Init ***********/
            dma_ch_rx = dma_channel_get((uint32_t)uart, DMA_USART_RX, 0);
            dma_irq_rx = dma_irq_get((uint32_t)uart, DMA_USART_RX, 0);
            /* Validate DMA params */
            if (dma_ch_rx != 0xFF && dma_irq_rx != 0xFF) {
                enable_pclock((uint32_t)dmaptr);
                dma_unit_rx = dmaptr;

                /* RX DMA stream config */
                LL_DMA_DisableChannel(dmaptr, dma_ch_rx);
                LL_DMA_SetDataTransferDirection(dmaptr, dma_ch_rx, LL_DMA_DIRECTION_PERIPH_TO_MEMORY);
                LL_DMA_SetChannelPriorityLevel(dmaptr, dma_ch_rx, LL_DMA_PRIORITY_LOW);
                LL_DMA_SetMode(dmaptr, dma_ch_rx, LL_DMA_MODE_CIRCULAR);
                LL_DMA_SetPeriphIncMode(dmaptr, dma_ch_rx, LL_DMA_PERIPH_NOINCREMENT);
                LL_DMA_SetMemoryIncMode(dmaptr, dma_ch_rx, LL_DMA_MEMORY_INCREMENT);
                LL_DMA_SetPeriphSize(dmaptr, dma_ch_rx, LL_DMA_PDATAALIGN_BYTE);
                LL_DMA_SetMemorySize(dmaptr, dma_ch_rx, LL_DMA_MDATAALIGN_BYTE);
                /* Set source and target */
                LL_DMA_SetPeriphAddress(dmaptr, dma_ch_rx, (uint32_t)&uart->RxDataReg);
                LL_DMA_SetMemoryAddress(dmaptr, dma_ch_rx, (uint32_t)rx_buffer);
                LL_DMA_SetDataLength(dmaptr, dma_ch_rx, sizeof(rx_buffer));
                /* Set interrupts */
                //LL_DMA_EnableIT_HT(dmaptr, dma_ch_rx);
                //LL_DMA_EnableIT_TC(dmaptr, dma_ch_rx);
                LL_DMA_DisableIT_HT(dmaptr, dma_ch_rx);
                LL_DMA_DisableIT_TC(dmaptr, dma_ch_rx);
                /* Set interrupt configuration */
                NVIC_SetPriority((IRQn_Type)dma_irq_rx,
                    NVIC_EncodePriority(NVIC_GetPriorityGrouping(), ISR_PRIO_UART_DMA, 0));
                NVIC_EnableIRQ((IRQn_Type)dma_irq_rx);
                /* Enable DMA */
                LL_DMA_EnableChannel(dmaptr, dma_ch_rx);

                dma_request_config((uint32_t)uart, DMA_USART_RX, 0);
            }
        }
    }

    if ((p_use_dma & USE_DMA_TX) && p_usart_tx) {
        uart = (USART_TypeDef*)p_usart_tx;
        dmaptr = (DMA_TypeDef *)dma_get((uint32_t)uart, DMA_USART_TX, 0);
        if (dmaptr) {
            /*********** USART TX DMA Init ***********/
            dma_ch_tx = dma_channel_get((uint32_t)uart, DMA_USART_TX, 0);
            dma_irq_tx = dma_irq_get((uint32_t)uart, DMA_USART_TX, 0);
            /* Validate DMA params */
            if (dma_ch_tx != 0xFF && dma_irq_tx != 0xFF) {
                enable_pclock((uint32_t)dmaptr);
                dma_unit_tx = dmaptr;

                /* TX DMA stream config */
                LL_DMA_DisableChannel(dmaptr, dma_ch_tx);
                LL_DMA_SetDataTransferDirection(dmaptr, dma_ch_tx, LL_DMA_DIRECTION_MEMORY_TO_PERIPH);
                LL_DMA_SetChannelPriorityLevel(dmaptr, dma_ch_tx, LL_DMA_PRIORITY_LOW);
                LL_DMA_SetMode(dmaptr, dma_ch_tx, LL_DMA_MODE_NORMAL);
                LL_DMA_SetPeriphIncMode(dmaptr, dma_ch_tx, LL_DMA_PERIPH_NOINCREMENT);
                LL_DMA_SetMemoryIncMode(dmaptr, dma_ch_tx, LL_DMA_MEMORY_INCREMENT);
                LL_DMA_SetPeriphSize(dmaptr, dma_ch_tx, LL_DMA_PDATAALIGN_BYTE);
                LL_DMA_SetMemorySize(dmaptr, dma_ch_tx, LL_DMA_MDATAALIGN_BYTE);
                /* Set target address */
                LL_DMA_SetPeriphAddress(dmaptr, dma_ch_tx, (uint32_t)&uart->TxDataReg);
                /* Set interrupts */
                LL_DMA_DisableIT_HT(dmaptr, dma_ch_tx);
                LL_DMA_EnableIT_TC(dmaptr, dma_ch_tx);
                /* Set interrupt configuration */
                NVIC_SetPriority((IRQn_Type)dma_irq_tx,
                    NVIC_EncodePriority(NVIC_GetPriorityGrouping(), ISR_PRIO_UART_DMA, 0));
                NVIC_EnableIRQ((IRQn_Type)dma_irq_tx);

                dma_request_config((uint32_t)uart, DMA_USART_TX, 0);
            }
        }
    }

    /* Create UART CR1 configurations for TX and RX modes */
    DR_RX = USART_CR1_UE | USART_CR1_RE;
    DR_TX = USART_CR1_UE | USART_CR1_TE;
    DR_RX |= ((dma_unit_rx) ? USART_CR1_IDLEIE : USART_CR1_RXNEIE);
    DR_TX |= ((dma_unit_tx) ? 0U : USART_CR1_TXEIE);
    if (!half_duplex && (p_usart_tx == p_usart_rx)) {
        if (!gpio_out_valid(p_duplex_pin)) {
            // Full duplex
            DR_RX |= USART_CR1_TE;  // Keep also TX active
            DR_TX |= DR_RX;         // Keep also RX active
        }
    }

    /*********** USART Init ***********/
    configure_uart_peripheral((USART_TypeDef*)p_usart_tx, baud, half_duplex);
    if (p_usart_rx != p_usart_tx) {
        configure_uart_peripheral((USART_TypeDef*)p_usart_rx, baud, uart_pin_is_tx(rx_pin));
#if 0 //defined(STM32F3xx)
        if (uart_pin_is_tx(rx_pin))
            LL_USART_SetTXRXSwap((USART_TypeDef*)p_usart_rx, LL_USART_TXRX_SWAPPED);
#endif
    }

#if defined(STM32F3xx)
    /* F3 can swap Rx and Tx pins */
    if (uart_tx_pin_is_rx(tx_pin)) {
        LL_USART_SetTXRXSwap((USART_TypeDef*)p_usart_tx, LL_USART_TXRX_SWAPPED);
    }
    /* F3 can invert uart lines */
    if (inverted) {
        LL_USART_SetTXPinLevel((USART_TypeDef*)p_usart_tx, LL_USART_TXPIN_LEVEL_INVERTED);
        LL_USART_SetRXPinLevel((USART_TypeDef*)p_usart_rx, LL_USART_RXPIN_LEVEL_INVERTED);
    }
#endif

    if (dma_unit_rx)
        LL_USART_EnableDMAReq_RX((USART_TypeDef*)p_usart_rx);
    else
        LL_USART_DisableDMAReq_RX((USART_TypeDef*)p_usart_rx);
    if (dma_unit_tx)
        LL_USART_EnableDMAReq_TX((USART_TypeDef*)p_usart_tx);
    else
        LL_USART_DisableDMAReq_TX((USART_TypeDef*)p_usart_tx);

    /* Configure to receiver mode by default */
    hw_enable_receiver();
    /* Enable UART IRQ */
    if (usart_irq_tx < 0xff) {
        NVIC_SetPriority((IRQn_Type)usart_irq_tx,
            NVIC_EncodePriority(NVIC_GetPriorityGrouping(), ISR_PRIO_UART, 0));
        NVIC_EnableIRQ((IRQn_Type)usart_irq_tx);
    }
    if (usart_irq_rx < 0xff) {
        NVIC_SetPriority((IRQn_Type)usart_irq_rx,
            NVIC_EncodePriority(NVIC_GetPriorityGrouping(), ISR_PRIO_UART, 0));
        NVIC_EnableIRQ((IRQn_Type)usart_irq_rx);
    }
    /* Configure UART pins to alternative mode */
    uart_config_afio((uint32_t)p_usart_tx, rx_pin, tx_pin);
}

void HardwareSerial::Pause(void)
{
    /* Stop RX UART */
    ((USART_TypeDef *)p_usart_rx)->CR1 = 0;
}

void HardwareSerial::Continue(void)
{
    /* Enable RX UART */
    ((USART_TypeDef *)p_usart_rx)->CR1 = DR_RX;
}

void HardwareSerial::end(void)
{
    if (dma_unit_rx) {
        LL_DMA_DisableChannel((DMA_TypeDef *)dma_unit_rx, dma_ch_rx);
        NVIC_DisableIRQ((IRQn_Type)dma_irq_rx);
    }
    if (dma_unit_tx) {
        LL_DMA_DisableChannel((DMA_TypeDef *)dma_unit_tx, dma_ch_tx);
        NVIC_DisableIRQ((IRQn_Type)dma_irq_tx);
    }
    if (p_usart_rx != p_usart_tx) {
        ((USART_TypeDef *)p_usart_rx)->CR1 = 0;
        if (usart_irq_rx < 0xff)
            NVIC_DisableIRQ((IRQn_Type)usart_irq_rx);
    }
    if (p_usart_tx) {
        ((USART_TypeDef *)p_usart_tx)->CR1 = 0;
        if (usart_irq_tx < 0xff)
            NVIC_DisableIRQ((IRQn_Type)usart_irq_tx);
    }
}

void FAST_CODE_2 HardwareSerial::hw_enable_receiver(void)
{
    USART_TypeDef * const uart = (USART_TypeDef *)p_usart_rx;
    uint8_t duplex = gpio_out_valid(p_duplex_pin);
    if (half_duplex || duplex) {
        USART_TypeDef * const uart_tx = (USART_TypeDef *)p_usart_tx;
        // Wait until transfer is completed
        while (!(uart_tx->StatReg & USART_SR_TC));
    }
    if (duplex) {
        gpio_out_write(p_duplex_pin, 0 ^ p_duplex_pin_inv);
    }
    uart->CR1 = DR_RX;
}

void FAST_CODE_2 HardwareSerial::hw_enable_transmitter(void)
{
    USART_TypeDef * uart = (USART_TypeDef *)p_usart_tx;
    uart->CR1 = DR_TX;
    if (gpio_out_valid(p_duplex_pin)) {
        gpio_out_write(p_duplex_pin, 1 ^ p_duplex_pin_inv);
    }
}
